--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -2,13 +2,13 @@
 pageType: home
 
 hero:
-  name: My Site
-  text: A cool website!
-  tagline: This is the tagline
+  name: electron-rs
+  text: 快如闪电的 electron 开发工具
+  tagline: 简单、高效、开箱即用
   actions:
     - theme: brand
       text: Quick Start
-      link: /guide/
+      link: /guide/getting-started
     - theme: alt
       text: GitHub
       link: https://github.com/web-infra-dev/rspress
@@ -35,3 +35,4 @@ features:
     details: Through its extension mechanism, you can easily extend theme UI and build process.
     icon: 🔥
 ---
+
