--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -11,7 +11,7 @@ hero:
       link: /guide/getting-started
     - theme: alt
       text: GitHub
-      link: https://github.com/web-infra-dev/rspress
+      link: https://github.com/zuiaibaicaiya/create-electron-rs.git
   image:
     src: /rspress-icon.png
     alt: Logo
