--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -7,7 +7,7 @@ hero:
   tagline: 简单、高效、开箱即用
   actions:
     - theme: brand
-      text: Quick Start
+      text: 快速上手
       link: /guide/getting-started
     - theme: alt
       text: GitHub
@@ -16,23 +16,23 @@ hero:
     src: /rspress-icon.png
     alt: Logo
 features:
-  - title: Blazing fast build speed
-    details: The core compilation module is based on the Rust front-end toolchain, providing a more ultimate development experience.
-    icon: 🏃🏻‍♀️
-  - title: Support for MDX content writing
-    details: MDX is a powerful way to write content, allowing you to use React components in Markdown.
-    icon: 📦
-  - title: Built-in full-text search
-    details: Automatically generates a full-text search index for you during construction, providing out-of-the-box full-text search capabilities.
+  - title: 基于 Rsbuild
+    details: 享受 Rsbuild 带来的极致开发体验。
+    icon: 🚀
+  - title: 开箱即用
+    details: 集成生态中最实用的构建功能
+    icon: 🦄
+  - title: 框架无关
+    details: 支持 React、Vue、Solid、Svelte 等。
+    icon: 🎯
+  - title: 深度优化
+    details: 自动优化静态资源，最大化生产性能。
+    icon: 🛠️
+  - title: 灵活插拔
+    details: 提供轻量级插件系统和一系列高质量插件。
     icon: 🎨
-  - title: Simpler I18n solution
-    details: With the built-in I18n solution, you can easily provide multi-language support for documents or components.
-    icon: 🌍
-  - title: Static site generation
-    details: In production, it automatically builds into static HTML files, which can be easily deployed anywhere.
-    icon: 🌈
-  - title: Providing multiple custom capabilities
-    details: Through its extension mechanism, you can easily extend theme UI and build process.
-    icon: 🔥
+  - title: 易于配置
+    details: 以零配置启动，然后一切皆可配置。
+    icon: 🍭
 ---
 
